force-app/main/default/objects/Agri_Order__c/Agri_Order__c.object-meta.xml
<CustomObject>
    <label>Agri Order</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agri Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>