force-app/main/default/objects/Agri_Order__c/fields/Escrow_Status__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Status__c</fullName>
    <label>Escrow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>