force-app/main/default/objects/Agri_Order__c/fields/OTP_Attempts__c.field-meta.xml
<CustomField>
    <fullName>OTP_Attempts__c</fullName>
    <label>OTP Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>